# pig-latin-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: docs.yml
benches/: translation_benchmark.rs
examples/: lorem_ipsum_profiling.rs
src/: lib.rs  main.rs
