[package]
name = "pig_latin"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
lipsum = "0.9.1"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"

[[bench]]
name = "translation_benchmark"
harness = false

# see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench=false

[[bin]]
name="pig_latin"
src="src/main.rs"
bench=false