[package]
name = "pig_latin"
version = "0.1.0"
edition = "2021"
default-run="pig_latin"

[dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
lipsum = "0.9.1"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"

[[bench]]
name = "translation_benchmark"
harness = false

# see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench=false

[[bin]]
name="pig_latin"
src="src/main.rs"
bench=false

[[bin]]
name="lorem_ipsum_profiling"
src="src/bin/lorem_ipsum_profiling.rs"
bench=false

[profile.profile]
inherits = "release"
debug = true
